# evolution-data-server

./: .gitignore  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  index.html  params.json  patch  project.config
addressbook/: Makefile.in
addressbook/backends/: Makefile.in
addressbook/libebook/: .gitignore  Makefile.am  Makefile.in  e-book-client-view.c  e-book-client-view.h  e-book-client.c  e-book-client.h  e-book-view-private.h  e-book-view.c  e-book-view.h  e-book.c  e-book.h  e-contact.c  e-vcard.c  e-vcard.h
addressbook/libebook-contacts/: .gitignore  Makefile.in
addressbook/libedata-book/: .gitignore  Makefile.in  e-book-backend-cache.h  e-book-backend-db-cache.c  e-book-backend-sexp.c  e-book-backend-sexp.h  e-book-backend-sqlitedb.c  e-book-backend-sqlitedb.h  e-book-backend-sync.c  e-book-backend-sync.h  e-book-backend.c  e-book-backend.h  e-book-sqlite.c  e-book-sqlite.h  e-data-book-cursor-sqlite.c  e-data-book-factory.c  e-data-book-types.h  e-data-book-view.c  e-data-book-view.h  e-data-book.c  e-data-book.h  e-data-book.xml
addressbook/libegdbus/: .gitignore  Makefile.am  Makefile.in  e-gdbus-book-view.c  e-gdbus-book-view.h  e-gdbus-book.c  e-gdbus-book.h  e-gdbus-egdbusbook.c  e-gdbus-egdbusbook.h  e-gdbus-egdbusbookview.c  e-gdbus-egdbusbookview.h  e-gdbus-marshallers.c  e-gdbus-marshallers.h  e-gdbus-marshallers.list
addressbook/tests/: Makefile.in
art/: Makefile.in
calendar/: Makefile.in
calendar/backends/: Makefile.in
calendar/libecal/: .gitignore  Makefile.am  Makefile.in  e-cal-check-timezones.c  e-cal-client-view.c  e-cal-client-view.h  e-cal-client.c  e-cal-client.h  e-cal-component.c  e-cal-system-timezone.c  e-cal-view-private.h  e-cal-view.c  e-cal-view.h  e-cal.c  e-cal.h
calendar/libedata-cal/: .gitignore  Makefile.in  e-cal-backend-intervaltree.c  (+12 more)
camel/: .gitignore  Makefile.am  Makefile.in  camel-exception-list.def  camel-folder-search.c  camel-http-stream.c  camel-imapx-folder.c  camel-imapx-folder.h  camel-imapx-mailbox.c  camel-imapx-mailbox.h  camel-imapx-server.c  camel-imapx-server.h  camel-imapx-store-summary.c  camel-imapx-store.c  camel-imapx-stream.c  camel-imapx-utils.c  camel-imapx-utils.h  camel-sasl-ntlm.c  camel-sasl.c  camel-sasl.h  camel-store.c  camel-subscribable.c  camel-tcp-stream-raw.c  camel-tcp-stream-raw.h  camel-tcp-stream-ssl.c  camel-tcp-stream-ssl.h  camel-tcp-stream.c  camel-tcp-stream.h  camel.h
data/: .gitignore  Makefile.in
docs/: Makefile.in
libebackend/: .gitignore  Makefile.in  e-authentication-mediator.h  e-backend-enumtypes.c  e-backend-enumtypes.h
libedataserver/: .gitignore  Makefile.am  Makefile.in  e-cancellable-locks.c  e-client-private.h  e-client.c  e-client.h  e-credentials.h  e-data-server-util.c  e-gdbus-templates.c  e-gdbus-templates.h  e-sexp.c
libedataserverui/: Makefile.am  Makefile.in  e-client-authenticate.c  e-client-authenticate.h  e-client-utils.c  e-client-utils.h
modules/: Makefile.in
po/: POTFILES.in
private/: .gitignore  Makefile.am  Makefile.in
servers/: Makefile.in
services/: Makefile.in
tests/: .gitignore  Makefile.in
tests/libebook/client/: .gitignore  Makefile.am  Makefile.in  client-test-utils.c  test-client-add-contact.c  test-client-async.c  test-client-cursor-operations.c  test-client-custom-summary.c  test-client-examine.c  test-client-get-book-view.c  test-client-get-capabilities.c  test-client-get-contact.c  test-client-get-required-fields.c  test-client-get-supported-auth-methods.c  test-client-get-supported-fields.c  test-client-get-view.c  test-client-modify-contact.c  test-client-remove-contact-by-uid.c  test-client-remove-contact.c  test-client-remove-contacts.c  test-client-remove.c  test-client-revision-view.c  test-client-search.c  test-client-stress-views.c  test-client-suppress-notifications.c  test-client-uid-only-view.c  test-client.c
vala/: .gitignore  Makefile.in
(+223 files in other folders)
